# cic

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cic-check.properties  cicheck.properties.example  prfrm.properties.sample
cmake/modules/: FindAngelScript.cmake  FindCatch.cmake
cmake_modules/: FindFMT.cmake  FindPoco.cmake
etc/CICheck/: cicheck__task_declarations.xml  cicheck__tasks.xml  targetDecls.cicheck.xml
include/CICheck/task/: ACheckMap.hpp  ARule.hpp  ARuleSet.hpp  ATargetSet.hpp  ATask.hpp  AbstractRule.hpp  AbstractTargetSet.hpp  AbstractTask.hpp  BashScriptRule.hpp  CheckMap.hpp  LinearTargetSet.hpp  RuleSet.hpp  Target.hpp  TargetSet.hpp  Task.hpp  TaskDecl.hpp  TaskProvider.hpp  TaskUnit.hpp
include/CICheck/tgt/: Target.hpp  TargetProvider.hpp
include/CICheck/tu/: Factory.hpp  FactoryOwner.hpp  ZarFactory.hpp
include/CICheck/xmlu/: XMLUtils.hpp
share/CICheck/sample_task/: task.xml
share/CICheck/tasks/sample_task/: task.xml
share/cic/check/: declarations.xml
share/cic/check/goals/Test0/: goal.xml
src/: CMakeLists.txt
src/check/: CMakeLists.txt
src/check/share/cic/check/plans/: test0.xml
src/check/src/: CheckApp.cpp  CheckApp.hpp  main.cpp
src/cic-check/: CMakeLists.txt
src/cic-check/include/cic/check/: Factory.hpp  FailureRule.hpp  Industry.hpp  Phase.hpp  Plan.hpp  Rule.hpp  Serializable.hpp  SuccessRule.hpp  SystemCmdRule.hpp  XMLUtils.hpp
src/cic-check/src/cic/check/: FailureRule.cpp  Phase.cpp  Plan.cpp  Rule.cpp  SuccessRule.cpp  SystemCmdRule.cpp  XMLUtils.cpp
src/cic-industry/: CMakeLists.txt
src/cic-industry/include/cic/industry/: Industry.hpp
src/cic-industry/src/cic/industry/: Industry.cpp
src/cic-plan/: CMakeLists.txt
src/cic-plan/include/cic/plan/: Act.hpp  ActFailure.hpp  ActShell.hpp  ActSuccess.hpp  Action.hpp  ActionFailure.hpp  ActionShell.hpp  ActionSuccess.hpp  ActionSystemCmd.hpp  DAGNode.hpp  DepsTreePhase.hpp  DepsTreePlan.hpp  Factory.hpp  Industry.hpp  LinearPlan.hpp  PerformConfig.hpp  Phase.hpp  Plan.hpp  Report.hpp  Serializable.hpp  Target.hpp  XMLUtils.hpp
src/cic-plan/src/cic/plan/: Act.cpp  ActFailure.cpp  ActShell.cpp  ActSuccess.cpp  Action.cpp  ActionFailure.cpp  ActionShell.cpp  ActionSuccess.cpp  ActionSystemCmd.cpp  DepsTreePhase.cpp  DepsTreePlan.cpp  LinearPlan.cpp  PerformConfig.cpp  Phase.cpp  Plan.cpp  Report.cpp  Target.cpp  XMLUtils.cpp
src/cic-scripting/: CMakeLists.txt
src/cic-scripting/include/cic/scripting/: Scripting.hpp
src/cic-scripting/src/cic/scripting/: Scripting.cpp
src/cicheck/: Application.cpp  Application.hpp  CMakeLists.txt  Rules.cpp  Rules.hpp  TaskProvider.cpp  TaskProvider.hpp  main.cpp
src/cicheck/task/: CheckMap.cpp  CheckMap.hpp  FailureRule.cpp  FailureRule.hpp  RuleBase.cpp  RuleBase.hpp  RuleSet.cpp  RuleSet.hpp  SuccessRule.cpp  SuccessRule.hpp  SystemCmdRule.cpp  SystemCmdRule.hpp  TargetSet.cpp  TargetSet.hpp  Task.cpp  Task.hpp
src/goal/: CMakeLists.txt
src/goal/include/CICheck/goal/: ARule.hpp  Goal.hpp
src/goal/src/: ARule.cpp  Goal.cpp
src/industry/: CMakeLists.txt
src/industry/include/CICheck/industry/: Factory.hpp  Industry.hpp
src/industry/src/: fake.cpp
src/prfrm/: CMakeLists.txt
src/prfrm/share/cic/prfrm/plans/: test0.xml  test0_tgt0.xml
src/prfrm/src/: PrfrmApp.cpp  PrfrmApp.hpp  main.cpp
src/task/: ACheckMap.cpp  ARule.cpp  ARuleSet.cpp  ATargetSet.cpp  ATask.cpp  AbstractRule.cpp  AbstractTargetSet.cpp  AbstractTask.cpp  BashScriptRule.cpp  CMakeLists.txt  CheckMap.cpp  LinearTargetSet.cpp  RuleSet.cpp  Target.cpp  TargetSet.cpp  Task.cpp  TaskDecl.cpp  TaskProvider.cpp  TaskUnit.cpp
src/tgt/: CMakeLists.txt  Target.cpp  TargetProvider.cpp
src/tu/: CMakeLists.txt
src/xgoal/: CMakeLists.txt
src/xgoal/include/CICheck/xgoal/: ARule.hpp  FailureRule.hpp  Goal.hpp  Provider.hpp  SuccessRule.hpp  SystemCmdRule.hpp
src/xgoal/src/: FailureRule.cpp  Goal.cpp  Provider.cpp  SuccessRule.cpp  SystemCmdRule.cpp
src/xmlu/: CMakeLists.txt  XMLUtils.cpp
src/xmlu/include/CICheck/xmlu/: LoadableFromXML.hpp  XMLUtils.hpp
src/xmlu/src/: XMLUtils.cpp
